# modelops-cicd-demo

./: .gitignore  .sqlfluff  CLAUDE.md  DEMO.md  README.md  databricks.yml  prompt_opus_demo_petrobras.md  pyproject.toml
.claude/skills/: databricks-ai-functions  databricks-data-discovery  databricks-dbsql  databricks-docs  databricks-execution-compute  databricks-mlflow-evaluation  databricks-python-sdk  databricks-spark-structured-streaming  databricks-synthetic-data-gen  databricks-unity-catalog
.cursor/skills/: databricks-agent-bricks  databricks-aibi-dashboards  databricks-apps-python  databricks-iceberg  databricks-lakeflow-connect  databricks-metric-views  databricks-ml-training  databricks-unstructured-pdf-generation  databricks-zerobus-ingest
.github/workflows/: deploy.yml  modelops-fix.yml  modelops-review.yml  pr-checks.yml
.scratch/modelops-cicd-demo/: NAMING.md
bad-pr/: README.md  bad_python.py  bad_sql.sql
bad-pr/broken_bundle/: databricks.yml
data/: seed_bakery.py  seed_retail.py
docs/: ado-translation.md  architecture.drawio  azure-pipelines-deploy.yml  azure-pipelines-equivalent.yml  azure-pipelines-modelops-fix.yml  azure-pipelines-modelops-review.yml
modelops_handbook/: README.md  catalog-per-env.md  dabs-conventions.md  ml-model-lifecycle.md  naming-conventions.md  pii-secret-policy.md  sql-conventions.md  transform-pattern.md
scripts/: reset_demo.sh
sql/: daily_summary.sql  pricing_dashboard.sql
src/: daily_route_profitability.py
tests/: conftest.py  test_demand_forecaster.py  test_pipeline_serverless.py  test_promotion_core.py
(+42 files in other folders)
